--- a/estilos.CSS
+++ b/estilos.CSS
@@ -17,13 +17,16 @@ nav{
     align-items: center;
     width: 100%;
     background-color: rgb(210, 196, 232);
+    height: 80px;
 }
 nav h2{
     font-family: 'Times New Roman', Times, serif;
+    padding-top: 5px;
 }
 nav ul{
     display: flex;
     flex-direction: row;
+    padding-top: 7px;
 }
 nav li{
     display: flex;
@@ -45,5 +48,84 @@ nav a{
     font-weight: bold;
     font-size: 15px;
     color:black;
-    
+}
+
+
+
+.Container-Principal{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.Container-Principal aside{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    background-color: rgb(182, 183, 183);
+}
+.Container-Principal aside h2{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration: underline;
+    padding-top: 9px;
+}
+.Container-Principal aside ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+    list-style: none;
+}
+.Container-Principal aside li{
+    margin-bottom: 5px;
+}
+.Container-Principal aside a{
+    text-decoration: none;
+}
+.Container-Principal aside a:hover{
+    color: black;
+}
+.Container-Principal aside img{
+    height: 130px;
+    width: 250px;
+    object-fit: cover;
+    align-self: center;
+}
+
+
+
+
+.Container-Principal .contenedor{
+    background-color: black;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+}
+.Container-Principal .contenedor article{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+.Container-Principal .contenedor article section{
+    display: flex;
+    flex-direction: row;
+}
+.Container-Principal .contenedor article section div{
+    display: flex;
+    flex-direction: column;
+}
+.Container-Principal .contenedor article section div a{
+    text-decoration: none;
+}
+.Container-Principal .contenedor article section div a:hover{
+    color: black;
+}
+
+.Container-Principal .contenedor article section div img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.Container-Principal .contenedor article section p{
+
 }
