--- a/estilos.CSS
+++ b/estilos.CSS
@@ -40,7 +40,7 @@ nav li{
     list-style: none; 
 }
 nav li:hover{
-    background-color: rgb(179, 128, 225);
+    background-color: rgb(98, 77, 116);
 }
 nav a{
     text-decoration: none;
@@ -56,12 +56,13 @@ nav a{
     width: 100%;
     display: flex;
     flex-direction: row;
+    height: 400px;
 }
 .Container-Principal aside{
     display: flex;
     flex-direction: column;
     width: 25%;
-    background-color: rgb(182, 183, 183);
+    background-color: rgb(179, 172, 207);
 }
 .Container-Principal aside h2{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -95,19 +96,22 @@ nav a{
 
 
 .Container-Principal .contenedor{
-    background-color: black;
+    background-color: rgb(178, 165, 185);
     width: 75%;
     display: flex;
     flex-direction: column;
+    border-left: 3px solid black;
 }
 .Container-Principal .contenedor article{
     display: flex;
-    flex-direction: column;
-    width: 50%;
+    flex-direction: row;
+    height: 50%;
 }
 .Container-Principal .contenedor article section{
     display: flex;
     flex-direction: row;
+    width: 50%;
+    margin: 30px;
 }
 .Container-Principal .contenedor article section div{
     display: flex;
@@ -115,6 +119,8 @@ nav a{
 }
 .Container-Principal .contenedor article section div a{
     text-decoration: none;
+    margin-left: 5px;
+    color: rgb(154, 45, 182);
 }
 .Container-Principal .contenedor article section div a:hover{
     color: black;
@@ -125,7 +131,32 @@ nav a{
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
+    margin-bottom: 10px;
 }
 .Container-Principal .contenedor article section p{
+    margin-left: 20px;
+    margin-top: 20px;
+    text-align: left;
+}
 
+
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    background-color: rgba(43, 41, 41, 0.986);
+}
+footer a{
+    margin-top: 2px;
+    margin-inline: 20px;
+    margin-right: 30px;
+}
+footer a img{
+    width: 30px;
+}
+footer a #LogoPagina{
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    border-radius: 50%;  
 }
